[tool.poetry]
name = "homelab"
version = "0.1.0"
description = ""
authors = ["'John Syrinek' <\"john.syrinek@gmail.com\">"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^3.2.2"
ruff = "^0.0.263"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
