[tool.poetry]
name = "bootserver"
version = "0.1.0"
description = ""
authors = ["'John Syrinek' <john.syrinek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psutil = "^5.9.5"
gitpython = "^3.1.41"
rich = "^13.3.5"
py3tftp = "^1.3.0"
pygithub = "^1.59.0"
boto3 = "^1.28.15"
pyyaml = "^6.0.1"
aiohttp = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
